--- a/content/blog/updating-belief/index.adoc
+++ b/content/blog/updating-belief/index.adoc
@@ -5,8 +5,8 @@
 :tags: business, ethical hacking, risk
 :image: cover.png
 :alt: New information. Photo by M. Parzuchowski on Unsplash: https://unsplash.com/photos/GikVY_KS9vQ
-:description: How to use Bayes rule and basic probability theory to reduce uncertainty, refining initial estimates through evidence. An application to the information provided by a penetration test regarding the probability of having vulnerabilities and suffering their consequences.
-:keywords: Risk, Probability, Impact, Measure, Quantify, Security
+:description: Here you can find how to use Bayes rule and basic probability theory to reduce uncertainty, refining initial estimates through evidence.
+:keywords: Risk, Probability, Impact, Measure, Quantify, Security, Ethical Hacking, Pentesting
 :author: Rafael Ballestas
 :writer: raballestasr
 :name: Rafael Ballestas
