feat(doc): #2994.204 create rule 347
- Created R347 for OTP invalidation
- Added ASVS and CWE references
- Added a Description
- Fixed some minor typos in other rules


Former-commit-id: ee0a6f75d64c79801759179ab6aa4f581acdb2c7

--- a/content/pages/rules/authentication/153/index.adoc
+++ b/content/pages/rules/authentication/153/index.adoc
@@ -39,7 +39,7 @@ while they are in transit from the client to the server.
 . [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.7 Out of Band Verifier Requirements.(2.7.1)]
 Verify that clear text out of band (NIST "restricted") authenticators,
-such as SMS or PSTN, are not offered by default,
+such as *SMS* or *PSTN*, are not offered by default,
 and stronger alternatives such as push notifications are offered first.
 
 . [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
