--- a/content/pages/rules/authentication/237/index.adoc
+++ b/content/pages/rules/authentication/237/index.adoc
@@ -34,7 +34,7 @@ the software does not prove or insufficiently proves that the claim is correct.
 
 . [[r2]] link:https://cwe.mitre.org/data/definitions/307.html[CWE-307: Improper Restriction of Excessive Authentication Attempts].
 The software does not implement sufficient measures to prevent multiple failed
-authentication attempts within in a short time frame,
+authentication attempts within a short time frame,
 making it more susceptible to brute force attacks.
 
 . [[r3]] link:https://cwe.mitre.org/data/definitions/799.html[CWE-799: Improper Control of Interaction Frequency].
