--- a/content/pages/rules/authentication/319/index.adoc
+++ b/content/pages/rules/authentication/319/index.adoc
@@ -47,6 +47,6 @@ such that there are no weaker alternatives per the risk of the application.
 
 . [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.5 Credential Recovery Requirements.(2.5.7)]
-Verify that if OTP or multi-factor authentication factors are lost,
+Verify that if *OTP* or multi-factor authentication factors are lost,
 evidence of identity proofing is performed at the same level as during
 enrollment.
