--- a/content/blog/hit-miss/index.adoc
+++ b/content/blog/hit-miss/index.adoc
@@ -199,14 +199,14 @@ into concrete bills and coins.
 == References
 
 . [[r1]] C. Davidson-Pilon (2019).
-link:https://nbviewer.jupyter.org/github/CamDavidsonPilon/Probabilistic-Programming-and-Bayesian-Methods-for-Hackers/blob/master/Chapter1_Introduction/Ch1_Introduction_PyMC3.ipynb[_Probabilistic Programming and Bayesian Methods for Hackers._]
+link:https://github.com/CamDavidsonPilon/Probabilistic-Programming-and-Bayesian-Methods-for-Hackers[_Probabilistic Programming and Bayesian Methods for Hackers._]
 
 . [[r2]] D. Hubbard, R. Seiersen (2016).
 _How to measure anything in cibersecurity risk_.
 link:https://www.howtomeasureanything.com/[Wiley].
 
 . [[r3]] M. Richey M. and P. Zorn (2005).
-link:https://www.jstor.org/stable/30044191?seq=1#page_scan_tab_contents[Basketball, Beta, and Bayes.]
+link:https://www.jstor.org/stable/30044191?seq=1[Basketball, Beta, and Bayes.]
 _Mathematics Magazine_, 78(5), 354.
 
 . [[r4]] D. Robinson (2015).
