--- a/content/blog/quantitative-python/index.adoc
+++ b/content/blog/quantitative-python/index.adoc
@@ -319,7 +319,7 @@ which is often the case in dealing with uncertainty.
 == References
 
 . [[r1]] C. Davidson-Pilon (2019).
-link:https://nbviewer.jupyter.org/github/CamDavidsonPilon/Probabilistic-Programming-and-Bayesian-Methods-for-Hackers/blob/master/Chapter1_Introduction/Ch1_Introduction_PyMC3.ipynb[_Probabilistic Programming and Bayesian Methods for Hackers._]
+link:https://github.com/CamDavidsonPilon/Probabilistic-Programming-and-Bayesian-Methods-for-Hackers[_Probabilistic Programming and Bayesian Methods for Hackers._]
 
 . [[r2]] C. Motiff (2019).
 link:https://pbpython.com/monte-carlo.html[_Monte Carlo Simulation with Python_]
