feat(doc): #2994.205 add refs to some rules
- Added ASVS references to R224, R336, R181, R264 and R075
- Added CWE reference R075
- Fixed some minor typos


Former-commit-id: 71578fa3d0c4801f11cfe0c23f230e9ecfd0ede9

--- a/content/pages/rules/authentication/264/index.adoc
+++ b/content/pages/rules/authentication/264/index.adoc
@@ -60,3 +60,8 @@ V3.7 Defenses Against Session Management Exploits.(3.7.1)]
 Verify the application ensures a valid login session or requires
 re-authentication or secondary verification before allowing any sensitive
 transactions or account modifications.
+
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V9.2 Server Communications Security Requirements.(9.2.3)]
+Verify that all encrypted connections to external systems that involve
+sensitive information or functions are authenticated.
