--- a/content/pages/rules/architecture/266/index.adoc
+++ b/content/pages/rules/architecture/266/index.adoc
@@ -82,7 +82,7 @@ compatibility.
 
 . [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V9.1 Communications Security Requirements.(9.1.3)]
-Verify that old versions of SSL and TLS protocols, algorithms, ciphers, and
+Verify that old versions of *SSL* and *TLS* protocols, algorithms, ciphers, and
 configuration are disabled,
-such as SSLv2, SSLv3, or TLS 1.0 and TLS 1.1.
-The latest version of TLS should be the preferred cipher suite.
+such as *SSLv2*, *SSLv3*, or *TLS* 1.0 and *TLS* 1.1.
+The latest version of *TLS* should be the preferred cipher suite.
