--- a/content/pages/rules/certificates/091/index.adoc
+++ b/content/pages/rules/certificates/091/index.adoc
@@ -23,8 +23,8 @@ The software does not validate, or incorrectly validates, a certificate.
 
 . [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V9.2 Server Communications Security Requirements.(9.2.1)]
-Verify that connections to and from the server use trusted TLS certificates.
+Verify that connections to and from the server use trusted *TLS* certificates.
 Where internally generated or self-signed certificates are used,
-the server must be configured to only trust specific internal CAs and specific
-self-signed certificates.
+the server must be configured to only trust specific internal **CA**s and
+specific self-signed certificates.
 All others should be rejected.
