--- a/content/pages/rules/cryptography/224/index.adoc
+++ b/content/pages/rules/cryptography/224/index.adoc
@@ -121,3 +121,9 @@ V8.3 Sensitive Private Data.(8.3.7)]
 Verify that sensitive or private information that is required to be encrypted,
 is encrypted using approved algorithms that provide both confidentiality and
 integrity.
+
+. [[r19]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V9.1 Communications Security Requirements.(9.1.2)]
+Verify using online or up to date *TLS* testing tools that only strong
+algorithms, ciphers, and protocols are enabled,
+with the strongest algorithms and ciphers set as preferred.
