--- a/content/pages/rules/cryptography/338/index.adoc
+++ b/content/pages/rules/cryptography/338/index.adoc
@@ -26,7 +26,7 @@ which represents an increase in the overall security of the system.
 
 == References
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/326.html[CWE-326: Inadequate Encryption Strength]
+. [[r1]] link:https://cwe.mitre.org/data/definitions/326.html[CWE-326: Inadequate Encryption Strength].
 The software stores or transmits sensitive data using an encryption scheme that
 is theoretically sound,
 but is not strong enough for the level of protection required.
@@ -43,6 +43,6 @@ and does not fall back to insecure or unencrypted protocols.
 
 . [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V9.1 Communications Security Requirements.(9.1.2)]
-Verify using online or up to date TLS testing tools that only strong
+Verify using online or up to date *TLS* testing tools that only strong
 algorithms, ciphers, and protocols are enabled,
 with the strongest algorithms and ciphers set as preferred.
