feat(doc): #2994.206 add refs to some rules
- Added ASVS reference to R041 and R118
- Added CWE reference to R041
- Updated R041 and R118 keywords
- Fixed some minor typos


Former-commit-id: bd64af6aa76593b743ba69985437910f8c9aef7d

--- a/content/pages/rules/credentials/347/index.adoc
+++ b/content/pages/rules/credentials/347/index.adoc
@@ -44,7 +44,8 @@ account.
 
 . [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.8 Single or Multi Factor One Time Verifier Requirements.(2.8.4)]
-Verify that time-based *OTP*s can be used only once within the validity period.
+Verify that time-based **OTP**s can be used only once within the validity
+period.
 
 . [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V3.2 Session Binding Requirements.(3.2.1)]
