--- a/content/pages/rules/cryptography/336/index.adoc
+++ b/content/pages/rules/cryptography/336/index.adoc
@@ -26,11 +26,11 @@ allowed to fall back to insecure or unencrypted protocols.
 
 == References
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/319.html[CWE-319: Cleartext Transmission of Sensitive Information]
+. [[r1]] link:https://cwe.mitre.org/data/definitions/319.html[CWE-319: Cleartext Transmission of Sensitive Information].
 The software transmits sensitive or security-critical data in cleartext in a
 communication channel that can be sniffed by unauthorized actors.
 
-. [[r2]] link:https://cwe.mitre.org/data/definitions/326.html[CWE-326: Inadequate Encryption Strength]
+. [[r2]] link:https://cwe.mitre.org/data/definitions/326.html[CWE-326: Inadequate Encryption Strength].
 The software stores or transmits sensitive data using an encryption scheme that
 is theoretically sound,
 but is not strong enough for the level of protection required.
