--- a/content/pages/rules/files/041/index.adoc
+++ b/content/pages/rules/files/041/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/041/
 :category: files
 :description: This requirement establishes that the files transferred or uploaded to the system must be scanned for possible malicious code.
-:keywords: System, Validate, File, Code, Security, Malicious, Rules, Ethical Hacking, Pentesting
+:keywords: Validate, File, Code, ASVS, CWE, Malicious, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R041. Scan files for malicious code
@@ -14,3 +14,17 @@ the content of the files transferred to it is free of malicious code.
 == Findings
 
 * [inner]#link:/web/findings/027/[F027. Insecure file upload]#
+
+== References
+
+. [[r1]] link:https://cwe.mitre.org/data/definitions/749.html[CWE-749: Exposed Dangerous Method or Function].
+The software provides an Applications Programming Interface (*API*) or similar
+interface for interaction with external actors,
+but the interface includes a dangerous method or function that is not properly
+restricted.
+
+. [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V10.1 Code Integrity Controls.(10.1.1)]
+Verify that a code analysis tool is in use that can detect potentially
+malicious code, such as time functions, unsafe file operations and network
+connections.
